tests/paczka1/small_fuzzy/42559393.err
Error in line 5: hb32 A526 92,1
Error in line 1: 8jwhfODUK S748 82,5
